feature: position aléatoire des technologies dans la partie profile

--- a/index.html
+++ b/index.html
@@ -169,7 +169,6 @@
                         <img src="./public/img/dynamics365.jpg" alt="Merci à Clint Patterson sur Unsplash">
                     </div>
                     <h3 class="profiles__item-title">
-                        Dynamics365
                     </h3>
                     <button class="profiles__button">Rechercher</button>
                 </div>
@@ -178,7 +177,7 @@
                         <img src="./public/img/office365.jpg" alt="Merci à Glenn Carstens-Peters sur Unsplash"
                             class="profiles__item-image">
                     </div>
-                    <h3 class="profiles__item-title">Office365</h3>
+                    <h3 class="profiles__item-title"></h3>
                     <button class="profiles__button">Rechercher</button>
                 </div>
                 <div class="profiles__item--3">
@@ -187,7 +186,6 @@
                             class="profiles__item-image">
                     </div>
                     <h3 class="profiles__item-title">
-                        Power Platform
                     </h3>
                     <button class="profiles__button">Rechercher</button>
                 </div>
@@ -196,7 +194,7 @@
                         <img src="./public/img/office365.jpg" alt="Merci à Glenn Carstens-Peters sur Unsplash"
                             class="profiles__item-image">
                     </div>
-                    <h3 class="profiles__item-title">.Net</h3>
+                    <h3 class="profiles__item-title"></h3>
                     <button class="profiles__button">Rechercher</button>
                 </div>
                 <div class="profiles__item--5">
@@ -204,7 +202,7 @@
                         <img src="./public/img/office365.jpg" alt="Merci à Glenn Carstens-Peters sur Unsplash"
                             class="profiles__item-image">
                     </div>
-                    <h3 class="profiles__item-title">PowerBi</h3>
+                    <h3 class="profiles__item-title"></h3>
                     <button class="profiles__button">Rechercher</button>
                 </div>
                 <div class="profiles__item--6">
@@ -212,12 +210,10 @@
                         <img src="./public/img/office365.jpg" alt="Merci à Glenn Carstens-Peters sur Unsplash"
                             class="profiles__item-image">
                     </div>
-                    <h3 class="profiles__item-title">Biztalk</h3>
+                    <h3 class="profiles__item-title"></h3>
                     <button class="profiles__button">Rechercher</button>
                 </div>
             </div>
-
-
         </section>
     </main>
     <footer class="footer">
