feature: ajout d'un menu burger pour les portable. Fix: modification de quelques règles css.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                 <img src="./public/img/target_logo.svg" alt="Logo de Targeet" class="header__logo-image">
             </a>
         </div>
+        <button class="header__burger" aria-label="Menu">
+            <i class="fa-solid fa-bars"></i>
+        </button>
         <nav class="header__navbar">
             <ul class="header__nav-list">
                 <li class="header__nav-item">
@@ -59,7 +62,7 @@
         <div class="header__content">
             <img src="./public/img/header_illustration.jpg" alt="Illustration d'une femme devant un ordinateur">
             <div class="header__tagline">
-                <h1 class="header__title">Ciblez vos recrutements Microsoft</h1>
+                <h1 class="header__title">Ciblez les meilleurs talents Microsoft à portée de clic !</h1>
             </div>
         </div>
     </div>
@@ -266,6 +269,7 @@
         </div>
     </footer>
 
+
     <!---------------
     -----       -----
     ----- Modal -----
@@ -276,9 +280,8 @@
     <div class="contact" id="contact-modal">
         <div class="contact__overlay"></div>
         <div class="contact__content">
-            <!-- TODO: changer pour une icone -->
             <button class="contact__close" aria-label="Fermer la contact">
-                &times;
+                <i class="fa-solid fa-xmark"></i>
             </button>
             <div class="contact__body">
                 <h1 class="contact__title">Contactez-nous</h1>
@@ -340,7 +343,7 @@
         <div class="legal__overlay"></div>
         <div class="legal__content">
             <button class="legal__close" aria-label="Fermer la legal">
-                &times;
+                <i class="fa-solid fa-xmark"></i>
             </button>
             <div class="legal__body">
                 <h1 class="legal__title">Mentions Légales</h1>
@@ -653,7 +656,7 @@
         <div class="jobs-modal__overlay"></div>
         <div class="jobs-modal__content">
             <button class="jobs-modal__close" aria-label="Fermer la modale">
-                &times;
+                <i class="fa-solid fa-xmark"></i>
             </button>
             <div class="jobs-modal__body">
             </div>
@@ -665,8 +668,7 @@
         <div class="profile-modal__overlay"></div>
         <div class="profile-modal__content">
             <button class="profile-modal__close" aria-label="Fermer la modale">
-                &times;
-            </button>
+                <i class="fa-solid fa-xmark"></i> </button>
             <div class="profile-modal__carousel"></div>
         </div>
     </div>
