fix: correction du responsive du header

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </a>
         </div>
         <button class="header__burger" aria-label="Menu">
-            <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-bars-staggered"></i>
         </button>
         <nav class="header__navbar">
             <ul class="header__nav-list">
