fix: mise en place des éléments définitifs. Correction sur les styles des modales profiles, mentions légales et politique de confidentialités.

--- a/index.html
+++ b/index.html
@@ -7,17 +7,14 @@
     <link rel="stylesheet" href="./public/css/style.css">
     <title>Targeet - Plateforme pour Talents et Entreprises</title>
     <link rel="shortcut icon" href="./public/img/favicon.ico" type="image/x-icon">
-    <!-- TODO: changer avec un kit Targeet -->
+    <!-- Importation du kit des icônes -->
     <script src="https://kit.fontawesome.com/a1751d2ab0.js" crossorigin="anonymous"></script>
+    <!-- Importation des Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- TODO: changer pour les fonts sélectionnés -->
     <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Edu+AU+VIC+WA+NT+Pre:wght@400..700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-    <!-- TODO: ajouter la source des images -->
-
-
     <!-- On importe Slick -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -60,7 +57,7 @@
     </header>
     <div class="header__wrapper">
         <div class="header__content">
-            <img src="./public/img/header_illustration.jpg" alt="Illustration d'une femme devant un ordinateur">
+            <img src="./public/img/header_1.jpg" alt="Illustration d'une femme devant un ordinateur">
             <div class="header__tagline">
                 <h1 class="header__title">Ciblez les meilleurs talents Microsoft à portée de clic !</h1>
             </div>
@@ -87,15 +84,18 @@
                         <div class="about-us__content--1">
                             <h2 class="about-us__title">Notre histoire</h2>
                             <p class="about-us__text">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente excepturi repellendus
-                                harum incidunt cumque distinctio maxime, accusantium ex quasi natus deleniti
-                                voluptatibus ad
-                                ipsum labore exercitationem sequi hic eum temporibus aliquid, iste doloremque. Aliquam,
-                                nihil temporibus. Quasi exercitationem soluta provident! Assumenda, possimus quisquam
-                                vero
-                                ratione doloremque temporibus, aut aperiam totam nulla labore facere voluptate, aliquam
-                                eaque ullam officiis provident quibusdam obcaecati repellat porro odio. Aliquam sit quo
-                                porro id fugiat!
+                                Chez Targeet, tout commence par une passion : celle d'aider les entreprises à trouver
+                                les meilleurs talents dans
+                                l'univers des technologies Microsoft. Fondée par Yassine BECK, expert en recrutement
+                                depuis 2018, Targeet est née pour
+                                répondre à un besoin spécifique : permettre aux entreprises de recruter rapidement et
+                                efficacement les compétences clés
+                                dans les domaines Dynamics 365, .Net, MS BI, Power Platform, et SharePoint.
+
+                                Forts de plus de 7 ans d'expérience en recrutement spécialisé, nous avons accompagné des
+                                dizaines de projets
+                                technologiques à succès. Targeet, c'est l'histoire d'une expertise mise au service de
+                                vos ambitions.
                             </p>
                         </div>
                     </article>
@@ -104,48 +104,63 @@
                         <div class="about-us__content--2">
                             <h2 class="about-us__title">Nos valeurs</h2>
                             <p class="about-us__text">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio sequi deserunt eaque
-                                dolores
-                                et sunt totam consectetur cupiditate exercitationem ratione accusamus excepturi,
-                                repudiandae
-                                similique reprehenderit qui suscipit officiis porro voluptatem, fuga possimus. Nisi
-                                consequatur omnis animi quis provident laudantium eos sapiente perferendis soluta quae
-                                necessitatibus possimus natus voluptatibus, voluptatem inventore officia rerum cum
-                                veniam.
-                                Quo!
+                                Chez Targeet, nous croyons en :
                             </p>
+                            <ul>
+                                <li>L'Excellence : Chaque recrutement est abordé avec un souci constant de qualité et de
+                                    précision.</li>
+                                <li>La Transparence : Nous vous accompagnons avec clarté et honnêteté à chaque étape du
+                                    processus de recrutement.</li>
+                                <li>L'Engagement : Votre réussite est notre priorité. Nous nous impliquons pleinement
+                                    pour
+                                    trouver le talent qui fera la
+                                    différence dans vos projets.</li>
+                                <li>La Proximité : Une relation de confiance et un suivi personnalisé, pour comprendre
+                                    vos
+                                    besoins et vous apporter des
+                                    solutions sur mesure.</li>
+                            </ul>
                         </div>
                     </article>
                     <div class="about-us__wraper"></div>
                     <article class="about-us__article">
                         <div class="about-us__content--3">
-                            <h2 class="about-us__title">Notre équipe</h2>
+                            <h2 class="about-us__title">Nos projets</h2>
                             <p class="about-us__text">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga ipsum quam reiciendis
-                                labore
-                                quis, atque eos sapiente, maxime beatae laudantium distinctio consequuntur temporibus
-                                voluptatum quo dolorem, asperiores quasi eius libero! Dolor minima nisi veritatis
-                                inventore
-                                facere obcaecati quod nostrum, neque saepe temporibus voluptatem placeat! Omnis suscipit
-                                architecto dignissimos vel. Laboriosam possimus doloribus nam quidem autem cumque
-                                accusantium, soluta modi saepe laborum suscipit perspiciatis quibusdam deserunt! Modi
-                                aperiam excepturi aliquam ducimus perferendis necessitatibus rerum, a, nesciunt atque
-                                eos
-                                reprehenderit commodi sequi?
+                                Nous avons eu l'opportunité de collaborer avec de nombreuses entreprises en France et à
+                                l'international pour :</p>
+                            <ul>
+                                <li>Soutenir des projets de transformation digitale basés sur Dynamics 365 et Power
+                                    Platform.</li>
+                                <li>Accompagner la modernisation des systèmes d'information grâce à des experts .Net et
+                                    SharePoint.</li>
+                                <li>Optimiser les solutions décisionnelles avec des consultants spécialisés en MS BI.
+                                </li>
+                            </ul>
+                            <p>
+                                Notre objectif est clair : permettre à nos clients de réussir leurs projets
+                                technologiques grâce à des talents qualifiés
+                                et prêts à relever de nouveaux défis.
+                                Si vous avez des projets en cours ou des besoins de compétences spécifiques, Targeet est
+                                là pour vous accompagner à
+                                chaque étape, du sourcing à l'onboarding.
                             </p>
+                            
                         </div>
                     </article>
                     <div class="about-us__wraper"></div>
                     <article class="about-us__article">
                         <div class="about-us__content--4">
-                            <h2 class="about-us__title">Nos projets</h2>
+                            <h2 class="about-us__title">Pourquoi Targeet</h2>
                             <p class="about-us__text">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius necessitatibus sint,
-                                deleniti
-                                quasi officiis ut culpa nobis, quam ipsam, voluptatem nemo pariatur corporis illo! Illo
-                                praesentium consequuntur esse dolor, odit beatae nisi perspiciatis voluptas voluptatum
-                                placeat inventore maiores provident in ipsam dolorum, qui animi incidunt non asperiores
-                                odio.
+                                Chez Targeet, nous vous garantissons un recrutement efficace et ciblé dans l'univers des
+                                technologies Microsoft. Grâce à
+                                notre expertise pointue et un réseau riche en talents qualifiés, nous vous accompagnons
+                                de l'identification à
+                                l'intégration des meilleurs consultants.
+                                Notre approche sur mesure et notre rigueur assurent des recrutements fiables, vous
+                                permettant de réussir vos projets en
+                                toute sérénité. Votre succès est notre priorité.
                             </p>
                         </div>
                     </article>
@@ -158,62 +173,31 @@
                 <h2>Trouvez votre prochaine mission</h2>
             </div>
             <div class="jobs__image">
-                <img src="./public/img/microsoft_building.png" alt="Image d'un bâtiment Microsoft">
+                <img src="./public/img/carousel.jpg" alt="Représente un nuage de points multicolore">
             </div>
             <div id="carousel" class="jobs__carousel">
             </div>
         </section>
 
         <section id="profiles" class="profiles">
-            <h2 class="profiles__title">A la recherche d'un colaborateur?</h2>
+            <h2 class="profiles__title">À la recherche d'un collaborateur?</h2>
             <div class="profiles__container">
                 <div class="profiles__item--1">
-                    <div class="profiles__image">
-                        <img src="./public/img/dynamics365.jpg" alt="Merci à Clint Patterson sur Unsplash">
-                    </div>
-                    <h3 class="profiles__item-title">
-                    </h3>
                     <button class="profiles__button">Rechercher</button>
                 </div>
                 <div class="profiles__item--2">
-                    <div class="profiles__image">
-                        <img src="./public/img/office365.jpg" alt="Merci à Glenn Carstens-Peters sur Unsplash"
-                            class="profiles__item-image">
-                    </div>
-                    <h3 class="profiles__item-title"></h3>
                     <button class="profiles__button">Rechercher</button>
                 </div>
                 <div class="profiles__item--3">
-                    <div class="profiles__image">
-                        <img src="./public/img/office365.jpg" alt="Merci à Glenn Carstens-Peters sur Unsplash"
-                            class="profiles__item-image">
-                    </div>
-                    <h3 class="profiles__item-title">
-                    </h3>
                     <button class="profiles__button">Rechercher</button>
                 </div>
                 <div class="profiles__item--4">
-                    <div class="profiles__image">
-                        <img src="./public/img/office365.jpg" alt="Merci à Glenn Carstens-Peters sur Unsplash"
-                            class="profiles__item-image">
-                    </div>
-                    <h3 class="profiles__item-title"></h3>
                     <button class="profiles__button">Rechercher</button>
                 </div>
                 <div class="profiles__item--5">
-                    <div class="profiles__image">
-                        <img src="./public/img/office365.jpg" alt="Merci à Glenn Carstens-Peters sur Unsplash"
-                            class="profiles__item-image">
-                    </div>
-                    <h3 class="profiles__item-title"></h3>
                     <button class="profiles__button">Rechercher</button>
                 </div>
                 <div class="profiles__item--6">
-                    <div class="profiles__image">
-                        <img src="./public/img/office365.jpg" alt="Merci à Glenn Carstens-Peters sur Unsplash"
-                            class="profiles__item-image">
-                    </div>
-                    <h3 class="profiles__item-title"></h3>
                     <button class="profiles__button">Rechercher</button>
                 </div>
             </div>
@@ -347,10 +331,9 @@
             </button>
             <div class="legal__body">
                 <h1 class="legal__title">Mentions Légales</h1>
-                <!-- TODO: mettre la date de mise en production -->
                 <p>
                     <strong>Dernière mise à jour :</strong>
-                    [Date actuelle]
+                    09/12/2024
                 </p>
 
                 <h2 class="legal__section-title">
@@ -367,29 +350,24 @@
                 </p>
                 <ul>
                     <li>
-                        <!-- TODO: mettre les bonnes informations -->
                         <strong>Propriétaire :</strong>
-                        Targeet – [Adresse complète]
+                        Targeet - 6 rue fayolle, 57240 Nilvange
                     </li>
                     <li>
-                        <!-- TODO: mettre les bonnes informations -->
                         <strong>Responsable de publication :</strong>
-                        [Nom du responsable]
-                        <!-- TODO: mettre les bonnes informations -->
-                        –
-                        <a href="mailto:contact@targeet.com">
-                            contact@targeet.com
+                        Yassine BECK
+                        -
+                        <a href="mailto:y.beck@targeet.io" class="legal__link">
+                            y.beck@targeet.io
                         </a>
                     </li>
                     <li>
-                        <!-- TODO: mettre les bonnes informations -->
                         <strong>Hébergeur :</strong>
-                        [Nom de l'hébergeur] – [Adresse complète]
+                        Hostinger - Švitrigailos str. 34, Vilnius 03230 Lithuania
                     </li>
                     <li>
-                        <!-- TODO: mettre les bonnes informations -->
                         <strong>Développement :</strong>
-                        [Nom de l'équipe ou du développeur]
+                        Tristan THOUVENOT pour Metz Numeric School
                     </li>
                 </ul>
 
@@ -435,10 +413,9 @@
                 <p>
                     Les données personnelles collectées via le site sont
                     traitées conformément à notre
-                    <a href="#privacy-legal" class="legal__link">
-                        politique de confidentialité
+                    <a href="#politique-confidentialite" class="legal__link">
+                        politique de confidentialité.
                     </a>
-                    .
                 </p>
 
                 <h2 class="legal__section-title">5. Droit applicable</h2>
@@ -457,14 +434,13 @@
         <div class="confidential__overlay"></div>
         <div class="confidential__content">
             <button class="confidential__close" aria-label="Fermer la confidential">
-                &times;
+                <i class="fa-solid fa-xmark"></i>
             </button>
             <div class="confidential__body">
                 <h1 class="confidential__title">Politique de Confidentialité</h1>
-                <!-- TODO: mettre la date de mise en production -->
                 <p>
                     <strong>Dernière mise à jour :</strong>
-                    [Date actuelle]
+                    09/12/2024
                 </p>
 
                 <h2 class="confidential__section-title">Introduction</h2>
@@ -488,22 +464,19 @@
                         <strong>Nom :</strong>
                         Targeet
                     </li>
-                    <!-- TODO: mettre la bonne adresse -->
                     <li>
                         <strong>Adresse :</strong>
-                        [Adresse complète]
+                        6 rue fayolle, 57240 Nilvange
                     </li>
                     <li>
-                        <!-- TODO: mettre le bon mail -->
                         <strong>E-mail :</strong>
-                        <a href="mailto:contact@targeet.com">
-                            contact@targeet.com
+                        <a href="mailto: y.beck@targeet.io">
+                            y.beck@targeet.io
                         </a>
                     </li>
-                    <!-- TODO: mettre le bon numéro de téléphone -->
                     <li>
                         <strong>Téléphone :</strong>
-                        [Numéro de téléphone]
+                        0374474009
                     </li>
                 </ul>
 
@@ -635,16 +608,14 @@
                 </p>
                 <ul>
                     <li>
-                        <!-- TODO: mettre le bon mail -->
                         <strong>E-mail :</strong>
-                        <a href="mailto:contact@targeet.com">
-                            contact@targeet.com
+                        <a href="mailto: y.beck@targeet.io">
+                            y.beck@targeet.io
                         </a>
                     </li>
                     <li>
-                        <!-- TODO: mettre la bonne adresse -->
                         <strong>Adresse :</strong>
-                        [Adresse postale de l'entreprise]
+                        6 rue fayolle, 57240 Nilvange 
                     </li>
                 </ul>
             </div>
