docu: mise à jour du readme. Nettoyage des commentaires

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-
     <!-- On importe notre script JS -->
     <script src="./public/scripts/main.js" defer></script>
 </head>
@@ -144,7 +143,7 @@
                                 là pour vous accompagner à
                                 chaque étape, du sourcing à l'onboarding.
                             </p>
-                            
+
                         </div>
                     </article>
                     <div class="about-us__wraper"></div>
@@ -234,7 +233,6 @@
         </div>
     </footer>
 
-
     <!---------------
     -----       -----
     ----- Modal -----
@@ -242,6 +240,7 @@
     ----------------->
 
     <!-- Modal pour le formulaire de contact -->
+    <!-- TODO: mettre en place l'envoie de mail depuis le serveur -->
     <div class="contact" id="contact-modal">
         <div class="contact__overlay"></div>
         <div class="contact__content">
@@ -596,7 +595,7 @@
                     </li>
                     <li>
                         <strong>Adresse :</strong>
-                        6 rue fayolle, 57240 Nilvange 
+                        6 rue fayolle, 57240 Nilvange
                     </li>
                 </ul>
             </div>
